--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,20 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <form action="#" onsubmit="checkpangram(); return false">
+      <label for="fname">Is this my PANGRAM?:</label><br>
+      <input type="text" id="pangram" name="pangram" pattern="[A-Za-z\s]+" title="Input should be alphabetical characters only"><br>
+      <input type="submit" value="Submit">
+    </form>
+    <div id="results"></div>
     <div id="root"></div>
+    <script>
+      function myThang(e){
+
+        console.log("THanggggggg", e)
+      }
+    </script>
+    <script src="scripts.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
