--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <form action="#" onsubmit="checkpangram(); return false">
+    <!-- <form action="#" onsubmit="checkpangram(); return false">
       <label for="fname">Is this my PANGRAM?:</label><br>
       <input type="text" id="pangram" name="pangram" pattern="[A-Za-z\s]+" title="Input should be alphabetical characters only"><br>
       <input type="submit" value="Submit">
     </form>
-    <div id="results"></div>
+    <div id="results"></div> -->
     <div id="root"></div>
     <script>
       function myThang(e){
