--- a/public/index.html
+++ b/public/index.html
@@ -24,24 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rooster Dogs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <form action="#" onsubmit="checkpangram(); return false">
-      <label for="fname">Is this my PANGRAM?:</label><br>
-      <input type="text" id="pangram" name="pangram" pattern="[A-Za-z\s]+" title="Input should be alphabetical characters only"><br>
-      <input type="submit" value="Submit">
-    </form>
-    <div id="results"></div> -->
     <div id="root"></div>
-    <script>
-      function myThang(e){
-
-        console.log("THanggggggg", e)
-      }
-    </script>
-    <script src="scripts.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
